assets/css/styles.css
/* styles.css */

html {
	background-color:lightyellow;
	background-image: 
		linear-gradient(lightyellow);
}

 body {
	font-family: Book Antiqua;
	color: goldenrod;
	font-size: 14px;
	lettter-spacing: 10px;
	margin: 0;
    padding: 50px 20px;
	display: flex;
    justify-content: center;
}

.poem-container {
    
    width: fit-content;
    text-align: center; 

}
h1 {
	font-family: Book Antiqua;
	color: goldenrod;
	font-size: 3rem;
	letter-spacing: 5px;
	margin-bottom: 40px;
	text-align: center;
}

.red {
}

pre {
font-family:Book Antiqua;
	color:goldenrod;
	font-size: 1rem;
	letter-spacing: 3px
	text-align: left;
}
.wrapper {
  max-width: 100px; /* Adjust this to your desired width */
  margin: 0 auto;    /* Centers the wrapper on the page */
}

header, .body-content {
  width: 100%;       
}

